src/tests/compile_fail/var_with_name.gab
let a = 2

fn a () => 1
